src/test/deca/context/invalid/homemade/call_method_on_notclass.deca
// trying to call method on something which is not a class

{
    int x;
    x.y();
}